# pgslow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: docker-compose.yml  workload.sql
examples/init/: 01-extension.sql
src/pgslow/: __init__.py  analyzer.py  cli.py  collector.py  connection.py  explain.py  render_terminal.py
src/pgslow/report/: __init__.py  render_html.py  style.css  template.html.j2
tests/: conftest.py  test_analyzer.py  test_cli.py  test_explain.py  test_integration.py
