[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgslow"
version = "0.1.0"
description = "Read-only CLI to analyze slow PostgreSQL queries via pg_stat_statements."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dan Morcov", email = "danmorcov88@gmail.com" }]
keywords = ["postgres", "postgresql", "pg_stat_statements", "performance", "dba", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.12",
    "psycopg[binary]>=3.1",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
pgslow = "pgslow.cli:main"

[project.urls]
Homepage = "https://github.com/danmorcov/pgslow"
Repository = "https://github.com/danmorcov/pgslow"

[tool.hatch.build.targets.wheel]
packages = ["src/pgslow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs a live PostgreSQL with pg_stat_statements (PGSLOW_TEST_DSN)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# typer expresses options as function-call defaults (Option/Argument), which is
# the intended pattern, so the bugbear check for that is not useful here.
ignore = ["B008"]
